@@ -1,3 +1,7 @@
+Mon Jul  7 00:20:52 CEST 2008 Christian Anthon <anthon@kiku.dk>
+
+	* gnubg.c: print prompt and answer for automatic questions
+
 Sun Jul  6 00:00:22 CEST 2008 Christian Anthon <anthon@kiku.dk>
 
 	* format.c: correct minor error introduced by translational changes
